--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 deutsche-bahn-delay-reasons = "0.2.0"
 wasm-bindgen = "0.2.74"
+
+[profile.release]
+lto = true
+opt-level = 's'
